🐛 FIX: alert user if case has already been opened; update styles for CalendarCase and gradients; adjust z-index for strawberry class.

--- a/src/index.css
+++ b/src/index.css
@@ -79,5 +79,5 @@
 }
 
 .strawberry {
-    z-index: 9999;
+    z-index: 100;
 }
